# miniExcel

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  clipboard.rs  exit.rs  exit_handler.rs  footer.rs  input.rs  logo.rs  main.rs  menu.rs  menu_screen.rs  screen.rs  tabs.rs  theme.rs  util.rs
src/model/: cell.rs  document.rs  limits.rs  mod.rs  recent.rs  table_path.rs  workbook.rs
src/model/formula/: ast.rs  error.rs  eval.rs  formula.pest  functions.rs  mod.rs  parser.rs
src/screen/: home.rs  home_flow.rs  mod.rs
src/screen/editor/: context.rs  delete.rs  edit.rs  host.rs  menu.rs  mod.rs  mode.rs  navigation.rs  session.rs  state.rs  viewport.rs  workbook_controller.rs
src/widget/: footer.rs  input.rs  logo.rs  mod.rs  recent_list.rs  selectable_list.rs  table.rs  tabs.rs
src/widget/table/: draw.rs  layout.rs  mod.rs  primitives.rs  view.rs
