[package]
name = "mini-excel"
version = "0.1.0"
description = "A TUI based mini Excel"
authors = ["uednd <247128190+uednd@users.noreply.github.com>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.29.0"
ratatui = "0.30.1"
arboard = "3"
replace-homedir = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.2.2"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
